kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  labels:
    app: api-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: spring-boot.davidcamelo.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
  tls:
    - hosts:
        - spring-boot.davidcamelo.com
      secretName: api-gateway-ingress
